Fix forwarding album by forward arrow Prevent keyboard closening on clicking @via Hide message input scrollbar Fix flickering media border in inline helper Hide checkbox ripple in popups Hide urls underline in reply markup buttons

--- a/src/scss/partials/_chatInlineHelper.scss
+++ b/src/scss/partials/_chatInlineHelper.scss
@@ -57,10 +57,15 @@
     }
   }
 
+  .media-container {
+    border-radius: inherit;
+  }
+
   .media-photo, .media-video, .media-poster {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    border-radius: inherit;
   }
 
   .gif {
